** (2012-04-14) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update DNS (BIND), update on IPv6-specifics
	- Revert DHCP back to a "normal" setup, failover in IPv6 is not
	  supported yet
	- Start writing up on certificates

** (2012-04-12) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Adding some images and architecturing information
	- Add information on DHCP

** (2012-04-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Added info on BIND

** (2012-04-10) Sven Vermeulen <sven.vermeulen@siphos.be>
	- More info regarding virtualization
	- Start networking services (small explanation on IPv6)

** (2012-04-07) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update on build server, restructure

** (2012-04-05) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Initial push