@@ -55,12 +55,12 @@
 	offsite knowledge storage ;-)
       </para>
       <para>
-        The version you are reading currently is v0.06 and has been generated
-	on 2012/04/14.
+        The version you are reading currently is v0.08 and has been generated
+	on 2012/04/21.
       </para>
     </abstract>
 
-    <edition>GLARA v0.06</edition> <!-- Update above paragraph too!! -->
+    <edition>GLARA v0.08</edition> <!-- Update above paragraph too!! -->
 
     <copyright>
       <year>2012</year>
