@@ -1,0 +1,1 @@
+<mxGraphModel grid="1" guides="1" tooltips="1" connect="1" fold="1" page="0" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="" style="shape=image;image=http://cdn1.iconfinder.com/data/icons/iconslandhardware/PNG/128x128/PortableComputer.png" vertex="1" parent="1"><mxGeometry x="30" y="57" width="90" height="78" as="geometry"/></mxCell><mxCell id="3" value="Request IP" style="shape=mxgraph.arrows.arrow_right;fillColor=white;strokeColor=black;strokeWidth=2" vertex="1" parent="1"><mxGeometry x="203" y="74" width="97" height="44" as="geometry"/></mxCell><mxCell id="4" edge="1" parent="1" source="2" target="3"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="5" value="DHCP Relay Server" style="swimlane" vertex="1" parent="1"><mxGeometry x="340" y="20" width="200" height="141" as="geometry"/></mxCell><mxCell id="6" value="DHCRelay" style="label;image=/img/clipart/Gear_128x128.png" vertex="1" parent="5"><mxGeometry x="30" y="48" width="140" height="60" as="geometry"/></mxCell><mxCell id="7" edge="1" parent="1" source="3" target="6"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="8" value="Forward request" style="shape=mxgraph.arrows.arrow_right;fillColor=white;strokeColor=black;strokeWidth=2;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="580" y="74" width="97" height="44" as="geometry"/></mxCell><mxCell id="9" value="DHCP Server" style="swimlane" vertex="1" parent="1"><mxGeometry x="730" y="20" width="200" height="141" as="geometry"/></mxCell><mxCell id="10" value="DHCPd" style="label;image=/img/clipart/Gear_128x128.png" vertex="1" parent="9"><mxGeometry x="30" y="48" width="140" height="60" as="geometry"/></mxCell><mxCell id="11" edge="1" parent="1" source="6" target="8"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="12" edge="1" parent="1" source="8" target="10"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="13" value="" style="shape=image;image=http://cdn1.iconfinder.com/data/icons/devine_icons/128/PNG/System and Internet/Firewall.png" vertex="1" parent="1"><mxGeometry x="550" y="20" width="60" height="69" as="geometry"/></mxCell></root></mxGraphModel>
